# gradiator

./: .gitignore  README.md  dev-requirements.txt  pyproject.toml  setup.py
.github/workflows/: pypi.yml
gradiator/: __init__.py  gradiator.py
gradify/: gradify.py  utils.py
